Bug 151801 - Autocorrection for closing single Quote doesn't work for other than default character for German
Summary: Autocorrection for closing single Quote doesn't work for other than default c...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.2.3 release
Hardware: All All
: medium normal
Assignee: Fred Kruse
URL:
Whiteboard: target:7.5.0
Keywords:
Depends on:
Blocks: AutoCorrect-Complete
  Show dependency treegraph
 
Reported: 2022-10-28 10:09 UTC by Fred Kruse
Modified: 2023-09-26 21:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fred Kruse 2022-10-28 10:09:52 UTC
If you change the autocorrection for a closing quote to another character than the default, the autocorrection still uses the default character. If you type the closing quote twice, then first the default is inserted, the second character is correct.
This problem appears, if you use language German. The autocorrection works correct for English.
Comment 1 Dieter 2022-11-09 15:46:28 UTC
Thank you for reporting the bug. Could you give more specific steps to reproduce:

I've tried:
1. Tools -> AutoCorrect -> AutoCorrect Options -> Localized Options
2. Default endquote for single quote is U+218
3. Change it (tested with U+201B) -> O.K.
4. Typd a sentence with this endnote.

Actual result:
No autocorrection

What are your steps?
=> NEEDINFO

Version: 7.4.3.1 (x64) / LibreOffice Community
Build ID: 3793858a34d8fef5b92f8fee233f97766f05e281
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 2 Fred Kruse 2022-11-09 18:45:31 UTC
Firstly, note: The bug doesn't appear in my tests with English documents. I could only reproduce it with German documents. The bug only regards the closing single quote.
1. Tools -> AutoCorrect -> AutoCorrect Options -> Localized Options
2. Default endquote for single quote is U+2019
3. Change it to U+2039
4. Test in Text, it works fine (strange but OK).
5. Tools -> AutoCorrect -> AutoCorrect Options -> Localized Options
6. Default opening quote for single quote is U+201A
7. Change the opening quote to U+203A
8. Test in text (opening and closing single quote in front and at the end of one word) -> The opening quote is set correct. The closing quote is set to default.
9. Type another closing quote direct after the first closing quote, the character U+2019 is set.
Comment 3 Fred Kruse 2022-11-09 18:47:55 UTC
Sorry, correction:
9. The character U+2039 is set.
Comment 4 QA Administrators 2022-11-10 04:03:46 UTC Comment hidden (obsolete)
Comment 5 Dieter 2022-11-10 06:32:09 UTC
Thank you for your steps. I also had some problems, but it was related to my user profile (Restart in SafeMode works).
Have you also tested this?
=> NEEDINFO
Comment 6 Fred Kruse 2022-11-10 10:37:13 UTC
Now, I tried the same steps in safe mode. The effect is the same.
But I recognized an interesting phenomenon.
The German default character for a single closing quote is (other than I wrote before) U+2018.
The closing quote which is used is U+2019.
This is the default single closing quote for English documents.
Comment 7 Dieter 2022-11-10 16:05:36 UTC
I hope someone else can reproduce the problem.
Comment 8 Commit Notification 2022-11-25 10:09:14 UTC
Fred Kruse committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5f249506ff2eddeaac47d521509bf1dde0b58d01

tdf#151801 solves bug for autocorrect non default quotes

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Buovjaga 2022-12-06 10:11:11 UTC
Thanks for the fix. If nothing else is required, you can change the status to resolved fixed.
Comment 10 Kira Tubo 2023-08-31 21:34:37 UTC
This issue is similar to one filed in Bug 139744. These issues were only reproducible in the old builds when "Default languages for documents" setting was set to "German (Germany)" under Tools > Options > Language Settings > Languages > Default Languages for Documents. 

Issue is no longer reproducible in the stable and daily master builds. Therefore, I am updating this issue with the Status: RESOLVED - WORKSFORME. 

Version: 7.6.0.3 (X86_64) / LibreOffice Community
Build ID: 69edd8b8ebc41d00b4de3915dc82f8f0fc3b6265
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 695ae365dcab7c7dd59b39411299c5c200081885
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 11 Buovjaga 2023-09-01 04:58:37 UTC
As there was a commit, the resolution should rather be fixed.