tdf#151801 solves bug for autocorrect non default quotes

Regards German and some other languages. A bug in the mechanism to distingish between apostroph and single end quote is solved.
Now, it works also for user defined quotes, like a single angle quote ('French' quote).

Change-Id: Ib4beca7a4304d57d7fdf977c20cf62410be3d2c6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142662
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>